# clippy

./: .gitignore  README.md  clippy.py  pyproject.toml
src/clippy/: clippy.py
