[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "clippy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pycairo>=1.29.0",
    "pygobject>=3.56.3",
]

[tool.uv]
package = true

[project.scripts]
hi-clippy = "clippy:main"